--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
@@ -13,10 +13,11 @@
   </h1>
   <p>
     Estado del requisito:
-    <b> {{ data.informe.calificacionCodigoString }} </b>
+    <b> No Cumple </b>
   </p>
   <p>
-    <b>{{ data.informe.nombre }}</b>  
+    <b> {{ data.informe.posicion }}. </b>
+    {{ data.informe.nombre }}
   </p>
 </div>
 
