--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
@@ -9,10 +9,10 @@
   </h1>
   <p class="mt-05em">
     Estado del requisito:
-    <b> {{ data.informe.calificacionCodigoString }} </b>
+    <b> Cumple </b>
   </p>
   <p>
-    <b> {{ data.informe.informeFinalListaChequeoId }}. </b>
+    <b> {{ data.informe.posicion }}. </b>
     {{ data.informe.nombre }}
   </p>
 </div>
