--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -8,11 +8,11 @@
   <mat-accordion>
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title [ngClass]="'expansion-style--title ' + estadoInformeString">
+        <mat-panel-title class="expansion-style--title">
           Informe final y anexos
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <app-tabla-informe-final-anexos [id]="id" [llaveMen]="llaveMen" [estaEditando]="estaEditando"></app-tabla-informe-final-anexos>
+      
     </mat-expansion-panel>
   </mat-accordion>
 </div>
