--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/detalle-desc-dir-tecnica-gog/detalle-desc-dir-tecnica-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/detalle-desc-dir-tecnica-gog/detalle-desc-dir-tecnica-gog.component.html
@@ -31,17 +31,25 @@
     <mat-expansion-panel class="expansion-style sub-expansion-black">
         <mat-expansion-panel-header class="expansion-style--header">
             <mat-panel-title class="expansion-style--title">
-                Costo variable
+                Descuento 1
             </mat-panel-title>
         </mat-expansion-panel-header>
+        <div class="text-center">
+            <p>Nombre del descuento: <b>4x1000</b></p>
+        </div>
+        <div style="text-align: left;">
+            <p><b>Criterios a los cuales aplica el descuento:</b> <em>Estudios y diseños interventoria hasta 90%</em></p>
+        </div>
         <mat-card class="shipping-card var-main-gris">
             <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text textoGris">
-                    4 x mil
+                    Estudios y diseños interventoria hasta 90%
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content align="left">
-                <p><strong>Nombre del concepto: </strong>Demolición </p>
+                <p><strong>Tipo de pago: </strong>Costo variable</p>
+                <p><strong>Conceptos de pago que aplican para el descuento: </strong>Demolición, Cimentación</p>
+                <h2 class="card-subTitle"> Demolición</h2>
                 <mat-card-title class="header-card--text sub-text">
                     Aportante 1
                 </mat-card-title>
@@ -68,9 +76,13 @@
     <mat-expansion-panel class="expansion-style sub-expansion-black">
         <mat-expansion-panel-header class="expansion-style--header">
             <mat-panel-title class="expansion-style--title">
-                Tipo de pago 3
+                Descuento 2
             </mat-panel-title>
         </mat-expansion-panel-header>
+        <div class="text-center">
+            <p>Nombre del descuento: <b>4x1000</b></p>
+        </div>
+        <p><b>Criterios a los cuales aplica el descuento:</b> <em>Estudios y diseños interventoria hasta 90%</em></p>
         <mat-card class="shipping-card var-main-gris">
             <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text textoGris">
