--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-validar-requisitos/expansion-validar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-validar-requisitos/expansion-validar-requisitos.component.html
@@ -2,21 +2,21 @@
   <div class="text-center">
     <div class="text-right">
       <a routerLink="/aprobarPreconstruccion" mat-button color="primary" class="btn-regresar">
-        <img src="assets/img/icon/regresar.svg" alt="Regresar">
+        <img src="assets/img/icon/regresar.svg" alt="Regresar" />
       </a>
     </div>
     <h1 class="title-menu--h1">
       Validar requisitos de inicio contrato {{ contrato.numeroContrato }} fase 1 - Preconstrucción
     </h1>
-    <p class="colorMainColor" style="margin-top: 1em;">
+    <p class="colorMainColor" style="margin-top: 1em">
       <span class="mx-2em">
         <b> Fecha de aprobacion de póliza: </b> {{ contrato.contratoPoliza[0].fechaAprobacion | date: 'dd/MM/yyyy' }}
       </span>
-      <span style="margin-left: 2em;">
+      <span style="margin-left: 2em">
         <b> Proyectos asociados: </b> {{ contrato.contratacion.contratacionProyecto.length }}
       </span>
     </p>
-    <p class="info-container" style="margin-top: 2em;">
+    <p class="info-container" style="margin-top: 2em">
       <span class="info-text sin-diligenciar">Sin diligenciar</span>
       <span class="info-text en-proceso">En proceso</span>
       <span class="info-text completo">Completo</span>
@@ -25,9 +25,10 @@
 
   <mat-accordion *ngFor="let contratoProyecto of contrato.contratacion.contratacionProyecto">
     <mat-expansion-panel class="expansion-style">
-      <mat-expansion-panel-header class="expansion-style--header" style="width: 50%;">
-        <mat-panel-title class="expansion-style--title" [ngClass]="contratoProyecto[ 'estadoSemaforo' ]">
-          {{ contratoProyecto.proyecto.llaveMen }} - {{ contratoProyecto.proyecto[ 'institucionEducativa' ].nombre }} - {{ contratoProyecto.proyecto[ 'sede' ].nombre }}
+      <mat-expansion-panel-header class="expansion-style--header" style="width: 50%">
+        <mat-panel-title class="expansion-style--title" [ngClass]="contratoProyecto['estadoSemaforo']">
+          {{ contratoProyecto.proyecto.llaveMen }} - {{ contratoProyecto.proyecto['institucionEducativa'].nombre }} -
+          {{ contratoProyecto.proyecto['sede'].nombre }}
         </mat-panel-title>
       </mat-expansion-panel-header>
 
@@ -55,17 +56,16 @@
           </p>
           <p>
             <b>Valor total del proyecto:</b>
-            {{ contratoProyecto.proyecto.valorTotal | currency:'COP':'symbol-narrow':'.0-0' }}
+            {{ contratoProyecto.proyecto.valorTotal | currency: 'COP':'symbol-narrow':'.0-0' }}
           </p>
         </mat-card-content>
       </mat-card>
 
-
       <mat-accordion *ngFor="let perfil of contratoProyecto.proyecto.contratoPerfil; index as i">
         <mat-expansion-panel class="expansion-style sub-expansion">
           <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="perfil[ 'estadoSemaforo' ]">
-              Perfil {{ i+1 }}
+            <mat-panel-title class="expansion-style--title" [ngClass]="perfil['estadoSemaforo']">
+              Perfil {{ i + 1 }}
             </mat-panel-title>
           </mat-expansion-panel-header>
 
@@ -73,7 +73,7 @@
             <mat-card-content>
               <p>
                 <b>Perfil:</b>
-                {{ perfil[ 'nombre' ] }}
+                {{ perfil['nombre'] }}
               </p>
               <p>
                 <b>Cantidad de hojas de vida requeridas:</b>
@@ -93,11 +93,12 @@
               </p>
               <section *ngFor="let obs of perfil.contratoPerfilObservacion">
                 <div *ngIf="obs.tipoObservacionCodigo === '1'">
-                  <b style="margin-bottom: .5em;">Oservaciones:</b> <div [innerHTML]="innerObservacion( obs.observacion )"></div>
+                  <b style="margin-bottom: 0.5em">Oservaciones:</b>
+                  <div [innerHTML]="innerObservacion(obs.observacion)"></div>
                 </div>
               </section>
               <p *ngFor="let radicadoFfie of perfil.contratoPerfilNumeroRadicado; index as j">
-                <b>Número de radicado en FFIE de aprobación de hojas de vida {{ j+1 }}:</b>
+                <b>Número de radicado en FFIE de aprobación de hojas de vida {{ j + 1 }}:</b>
                 {{ radicadoFfie['numeroRadicado'] }}
               </p>
               <p>
@@ -107,20 +108,26 @@
             </mat-card-content>
           </mat-card>
 
-          <section *ngIf="perfil[ 'observacionApoyo' ] !== undefined && perfil['tieneObservacionApoyo'] === true">
+          <section *ngIf="perfil['observacionApoyo'] !== undefined && perfil['tieneObservacionApoyo'] === true">
             <mat-card class="shipping-card var-main-gris">
               <mat-card-header class="header-card">
-                <mat-card-title class="header-card--text">
-                  Verificación del apoyo a la supervisión
-                </mat-card-title>
+                <mat-card-title class="header-card--text"> Verificación del apoyo a la supervisión </mat-card-title>
               </mat-card-header>
               <mat-card-content>
-                <b style="margin-left: 2em;">
-                  {{ perfil[ 'observacionApoyo' ].fechaCreacion | date: 'dd/MM/yyyy' }}
+                <b style="margin-left: 2em">
+                  {{ perfil['observacionApoyo'].fechaCreacion | date: 'dd/MM/yyyy' }}
                 </b>
-                <p *ngIf="perfil[ 'tieneObservacionApoyo' ] === true" style="margin-left: 2em;"><b>¿Tiene observaciones a las hojas de vida de este perfil?:</b> Si</p>
-                <p *ngIf="perfil[ 'tieneObservacionApoyo' ] === false" style="margin-left: 2em;"><b>¿Tiene observaciones a las hojas de vida de este perfil?:</b> No</p>
-                <div *ngIf="perfil[ 'tieneObservacionApoyo' ] === true" [innerHTML]="perfil[ 'observacionApoyo' ].observacion" style="margin-left: 2em;"></div>
+                <p *ngIf="perfil['tieneObservacionApoyo'] === true" style="margin-left: 2em">
+                  <b>¿Tiene observaciones a las hojas de vida de este perfil?:</b> Si
+                </p>
+                <p *ngIf="perfil['tieneObservacionApoyo'] === false" style="margin-left: 2em">
+                  <b>¿Tiene observaciones a las hojas de vida de este perfil?:</b> No
+                </p>
+                <div
+                  *ngIf="perfil['tieneObservacionApoyo'] === true"
+                  [innerHTML]="perfil['observacionApoyo'].observacion"
+                  style="margin-left: 2em"
+                ></div>
               </mat-card-content>
             </mat-card>
           </section>
@@ -133,8 +140,12 @@
             </div>
             <div>
               <mat-radio-group class="radioInput" [(ngModel)]="perfil['tieneObservaciones']">
-                <mat-radio-button [value]="true" [checked]="perfil['tieneObservaciones'] === true">Sí</mat-radio-button>
-                <mat-radio-button [value]="false" [checked]="perfil['tieneObservaciones'] === false">No</mat-radio-button>
+                <mat-radio-button [value]="true" [checked]="perfil['tieneObservaciones'] === true">
+                  Sí
+                </mat-radio-button>
+                <mat-radio-button [value]="false" [checked]="perfil['tieneObservaciones'] === false">
+                  No
+                </mat-radio-button>
               </mat-radio-group>
               <span class="required-form-group m-0">*</span>
             </div>
@@ -144,33 +155,55 @@
               <label class="text-area-quill--label size-label colorMainColor">
                 Observaciones a las hojas de vida del contratista de obra
               </label>
-              <quill-editor class="quill-editor-style miles" [styles]="editorStyle" [modules]="config"
-                (onContentChanged)="maxLength($event, 1000)" [(ngModel)]="perfil['verificarObservacion']" required>
+              <quill-editor
+                class="quill-editor-style miles"
+                [styles]="editorStyle"
+                [modules]="config"
+                (onContentChanged)="maxLength($event, 1000)"
+                [(ngModel)]="perfil['verificarObservacion']"
+                required
+              >
               </quill-editor>
             </div>
-            <span class="contador miles" *ngIf="perfil['verificarObservacion'] !== null && perfil['verificarObservacion'].length > 0">
-              {{1000 - textoLimpio( perfil['verificarObservacion'] )}}
+            <span
+              class="contador miles"
+              *ngIf="perfil['verificarObservacion'] !== null && perfil['verificarObservacion'].length > 0"
+            >
+              {{ 1000 - textoLimpio(perfil['verificarObservacion']) }}
             </span>
-            <span class="contador miles" *ngIf="perfil['verificarObservacion'] === null || perfil['verificarObservacion'].length === 0">
+            <span
+              class="contador miles"
+              *ngIf="perfil['verificarObservacion'] === null || perfil['verificarObservacion'].length === 0"
+            >
               1000
+            </span>
+            <span class="icon-incompleto">
+              <img
+                class="icon-incompleto--img"
+                src="assets/img/icon/incompleto.svg"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
+                *ngIf="!perfil['verificarObservacion'] && estaEditando"
+              />
             </span>
           </div>
 
           <div class="text-center">
-            <button mat-button
-                    color="warn"
-                    class="btn-guardar"
-                    type="submit"
-                    [disabled]="perfil['tieneObservaciones'] === null"
-                    (click)="onSubmit( perfil )">
-                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
+            <button
+              mat-button
+              color="warn"
+              class="btn-guardar"
+              type="submit"
+              [disabled]="perfil['tieneObservaciones'] === null"
+              (click)="onSubmit(perfil)"
+            >
+              <img src="assets/img/icon/guardar.svg" alt="Guardar" />
             </button>
           </div>
-
         </mat-expansion-panel>
       </mat-accordion>
-
     </mat-expansion-panel>
   </mat-accordion>
-
 </section>
